# habit_tracker_docker

./: .env.sample  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: createmod.py  createsu.py
users/migrations/: 0001_initial.py
